# libft

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  compile_commands.json  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  (+11 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
docs/: TODO.md
include/: libft.h
include/collections/maps/: ft_map_utils.h
include/collections/vectors/: vector.h
include/core/errors/: ft_errno.h
include/core/log/: log.h  log_internal.h
include/core/maths/: ft_maths.h
include/core/stdlib/: ft_stdlib.h  ft_stdlib_internal.h
include/core/string/: ft_string.h
include/core/string_builder/: string_builder.h
include/core/strings/: ft_strings.h
include/core/threading/: thread_pool.h
include/core/utils/: secure_random.h
include/graphics/: color.h  ft_ui.h
include/graphics/fonts/: ttf.h  ttf_internal.h
include/io/: ft_io.h  ft_printf.h  ft_printf_internal.h
includes/: libft.h
includes/collections/: ft_dlist.h  ft_list.h
includes/collections/maps/: ft_hashmap.h  ft_map.h  ft_treemap.h
includes/core/: ft_constants.h  ft_ctype.h  ft_maths.h
includes/core/errors/: ft_errno.h
includes/core/maths/: ft_maths.h
includes/core/memory/: ft_memory.h
includes/core/regex/: ft_regex.h
includes/core/string/: ft_string.h
includes/core/string_builder/: string_builder.h
includes/core/threading/: thread_pool.h
includes/core/utils/: ft_random.h  secure_random.h
includes/graphics/: ft_ttf.h  ft_ui.h
includes/graphics/fonts/: ttf.h  ttf_internal.h
includes/io/: ft_io.h  ft_printf.h  ft_printf_internal.h
includes/memory/: ft_memory.h
includes/string/: ft_string.h
src/collections/maps/: ft_map_utils.c  ft_map_utils2.c
src/collections/vectors/: ft_gen_val.c  ft_vector_at.c  ft_vector_every.c  ft_vector_foreach.c  ft_vector_free.c  ft_vector_init.c  ft_vector_map.c  ft_vector_pop.c  ft_vector_push.c  ft_vector_resize.c  ft_vector_shift.c  ft_vector_some.c  ft_vector_unshift.c
src/core/ctype/: ft_isblank.c  ft_iscntrl.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_tolower.c  ft_toupper.c
src/core/log/: log.c  log_core.c  log_setters.c  logs.c
src/core/maths/: ft_ceil.c  ft_clampf.c  ft_cosh.c  ft_deg_to_rad.c  ft_double_equals.c  ft_factorial.c  ft_fibonacci.c  ft_floor.c  ft_fmod.c  ft_gcd.c  ft_is_nan.c  ft_is_zero.c  ft_lcm.c  ft_max.c  ft_min.c  ft_mod.c  ft_pow.c  ft_rad_to_deg.c  ft_round.c  ft_sign.c  ft_signf.c  ft_sinh.c  ft_sqrt.c  ft_swap.c  ft_swapf.c  ft_trigo.c  ft_trunc.c
src/core/memory/: ft_calloc.c  ft_memcasecmp.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_mempcpy.c  ft_memrchr.c  ft_realloc.c
src/core/regex/: regex_find_all.c  regex_helpers.c  regex_match.c  regex_replace.c  regex_replace_all.c  regex_search.c
src/core/stdlib/: ft_atexit.c  ft_atof.c  ft_atoi.c  ft_atol.c  ft_random.c  ft_strtol.c
src/core/string/: ft_atof.c  ft_atol.c  ft_ftoa.c  ft_itoa.c  ft_ltoa.c  ft_split.c  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_strcspn.c  ft_strdup.c  ft_strerror.c  ft_strjoin.c  ft_strjoin_multiple.c  ft_strlcat.c  ft_strlen.c  ft_strlen_s.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnstr.c  ft_strpbrk.c  ft_strrchr.c  ft_strstr.c  ft_strtok.c  ft_strtrim.c  ft_utoa.c
src/core/string_builder/: sb_advanced.c  sb_create.c  sb_destroy.c  sb_replace.c  sb_utils_2.c
src/core/strings/: ft_ffs.c  ft_index.c  ft_rindex.c  ft_strcasecmp.c  ft_strncasecmp.c
src/core/utils/: secure_random.c
src/graphics/fonts/: ttf_loader.c
src/graphics/ui/: rect.c  switch.c
src/io/: ft_fclose.c  ft_feof.c  ft_ferror.c  ft_fflush.c  ft_fgetc.c  ft_fgets.c  ft_fopen.c  ft_fputc.c  ft_fputs.c  ft_fread.c  ft_fseek.c  ft_fstat.c  ft_ftell.c  ft_fwrite.c  ft_getc.c  ft_getline.c  ft_putc.c  ft_putchar.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_puts.c  ft_putstr_fd.c  ft_stdio.c
src/io/printf/: conversion.c  dprintf.c  format.c  fprintf.c  handlers.c  parse_format.c  parser.c  print_hex.c  print_signed.c  print_str.c  print_unsigned.c  printf.c  save_pos.c  snprintf.c  sprintf.c  strerror.c  util.c  vasprintf.c  vdprintf.c  vfprintf.c  vprintf.c  vsnprintf.c  vsprintf.c
srcs/: ft_putchar_fd.c  ft_putnbr_fd.c  ft_strdup.c
srcs/collections/lists/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
srcs/collections/maps/: ft_map_utils.c  ft_map_utils2.c
srcs/core/ctype/: ft_isalnum.c  ft_isalpha.c  (+13 more)
srcs/io/: ft_fopen.c  ft_getchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_stdio.c
srcs/memory/: ft_bzero.c  ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_realloc.c  ft_reallocarray.c
srcs/string/: ft_atoi.c  ft_itoa.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
test/: strlen_tests.cpp  strncmp_tests.cpp
(+236 files in other folders)
